--- a/style.css
+++ b/style.css
@@ -1,4 +1,39 @@
 html {
-  height: 100%;
+  height: 1332px;
   width: 100%;
+}
+
+.navBar {
+  padding: 5px;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  height: 80px;
+  width: 100%;
+  background-color: #465F95;
+}
+
+.inBody {
+  padding: 5px;
+  position: absolute;
+  left: 0px;
+  top: 90px;
+  background-color: #A4D1F5;
+}
+
+body {
+ background-color: #A4D1F5;
+}
+
+footer {
+  font-family: "Jua";
+  padding: 5px;
+  position: absolute;
+  left: 0;
+  top: 1176px;
+  height: 146px;
+  width: 110%;
+  background-color: #465F95;
+  color: white;
+  text-align: center;
 }
