--- a/style.css
+++ b/style.css
@@ -37,3 +37,18 @@ footer {
   color: white;
   text-align: center;
 }
+
+footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.FlexL {
+  margin-top: 40px;
+  margin-left: 60px;
+}
+
+.FlexR {
+  margin-top: 40px;
+  margin-right: 60px;
+}
