--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ html {
 }
 
 .navBar {
-  padding: 5px;
   position: absolute;
   left: 0px;
   top: 0px;
   height: 80px;
   width: 100%;
   background-color: #465F95;
+  border-bottom: 4px solid black;
 }
 
 .inBody {
@@ -18,24 +18,24 @@ html {
   position: absolute;
   left: 0px;
   top: 90px;
-  background-color: #A4D1F5;
+  background-color: #a4d1f5;
 }
 
 body {
- background-color: #A4D1F5;
+ background-color: #a4d1f5;
 }
 
 footer {
   font-family: "Jua";
-  padding: 5px;
   position: absolute;
   left: 0;
-  top: 1176px;
+  top: 1920px;
   height: 146px;
-  width: 110%;
+  width: 100%;
   background-color: #465F95;
   color: white;
   text-align: center;
+  
   border-style: solid;
   border-color: black;
   border-top-width: 4px;
@@ -57,4 +57,45 @@ footer {
 .FlexR {
   margin-top: 55px;
   margin-right: 60px;
+}
+
+.navBar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.OthPages {
+  font-family: "Just Another Hand";
+  color: white;
+  text-decoration: none;
+  font-size: 25px;
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-right: 20px
+}
+
+#logo {
+  margin-top: 5px;
+  margin-left: 5px;
+}
+
+.inBodySue {
+  margin-left: 540px;
+  margin-top: 180px;
+  height: 440px;
+  width: 580px;
+  background-color: #D1E7FF;
+  padding: 90px;
+  padding-left: 150px;
+  
+  border-radius: 30px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #4471AD;
+}
+
+.sueustxt {
+  font-family: "Inter";
+  font-size: 26px;
+  margin: 0px;
 }
