--- a/style.css
+++ b/style.css
@@ -139,3 +139,29 @@ button {
 .navtxt {
   margin-right: 70px;
 }
+
+.textBox1 {
+  background-color: rgb(0, 0, 0, 0.18);
+  border-style: solid;
+  border-width: 5px;
+  border-color: #4471AD;
+  border-radius: 30px;
+  padding: 30px;
+  font-family: "Just Another Hand";
+  color: white;
+  font-size: 38px;
+  width: 500px;
+  height: 390px;
+  text-align: center;
+  vertical-align: center;
+  position: absolute;
+  top: 502px;
+  left: 270px;
+  line-height: auto;
+}
+
+#YB1 {
+  position: absolute;
+  top: 724px;
+  left: -124px;
+}
