--- a/style.css
+++ b/style.css
@@ -138,6 +138,10 @@ button {
   top: 1048px;
 }
 
+.menufoot {
+  top: 2848px;
+}
+
 .navtxt {
   margin-right: 70px;
 }
@@ -164,6 +168,26 @@ button {
   top: 502px;
   left: 270px;
   line-height: auto;
+}
+
+.textBox2 {
+  background-color: rgb(0, 0, 0, 0.18);
+  border-style: solid;
+  border-width: 7px;
+  border-color: #4471AD;
+  border-radius: 30px;
+  padding: 30px;
+  font-family: "Just Another Hand";
+  color: white;
+  font-size: 45px;
+  text-align: left;
+  vertical-align: center;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  line-height: auto;
+  width: 2280px;
+  height: 2300px;
 }
 
 p {
