--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
   border: 0px;
 }
 
-img {
+.img {
   padding: 0px;
   margin: 0px;
   border: 3px;
@@ -208,6 +208,26 @@ button {
   height: 2300px;
 }
 
+.textBox3 {
+  background-color: rgb(0, 0, 0, 0.18);
+  border-style: solid;
+  border-width: 7px;
+  border-color: #4471AD;
+  border-radius: 30px;
+  padding: 110px;
+  font-family: "Just Another Hand";
+  color: white;
+  font-size: 45px;
+  text-align: left;
+  vertical-align: center;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  line-height: auto;
+  width: 2280px;
+  height: 2300px;
+}
+
 p {
   font-weight: normal;
   margin: 0px;
@@ -244,5 +264,11 @@ p {
 }
 
 #w {
-  margin-left: 840px;
+  margin-left: 540px;
+}
+
+#h2 {
+  text-align: center;
+  font-weight: normal;
+  font-size: 82px;
 }
