--- a/style.css
+++ b/style.css
@@ -152,6 +152,10 @@ button {
   top: 1048px;
 }
 
+.smalllfoot {
+  top: 1248px;
+}
+
 .menufoot {
   top: 2848px;
 }
@@ -271,4 +275,32 @@ p {
   text-align: center;
   font-weight: normal;
   font-size: 82px;
+}
+
+.textBox4 {
+  background-color: rgb(0, 0, 0, 0.18);
+  border-style: solid;
+  border-width: 7px;
+  border-color: #4471AD;
+  border-radius: 30px;
+  padding: 40px;
+  font-family: "Just Another Hand";
+  color: white;
+  font-size: 45px;
+  text-align: left;
+  vertical-align: center;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  line-height: auto;
+  width: 2280px;
+  height: 100px;
+  margin: auto;
+  margin-top: 150px;
+}
+
+#tl {
+  text-align: center;
+  font-weight: normal;
+  font-size: 90px;
 }
